syntax = "proto3";
option java_multiple_files = true;
package palm.auth.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

service User {
  rpc SignIn(SignInRequest) returns (google.protobuf.Empty) {}
  rpc SignUp(SignUpRequest) returns (google.protobuf.Empty) {}
  rpc Confirm(EmailForm) returns (google.protobuf.Empty) {}
  rpc ConfirmByToken(TokenForm) returns (google.protobuf.Empty) {}
  rpc Unlock(EmailForm) returns (google.protobuf.Empty) {}
  rpc UnlockByToken(TokenForm) returns (google.protobuf.Empty) {}
  rpc ForgotPassword(EmailForm) returns (google.protobuf.Empty) {}
  rpc ResetPassword(ResetPasswordRequest) returns (google.protobuf.Empty) {}
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty) {}
  rpc SetProfile(ProfileRequest) returns (google.protobuf.Empty) {}
  rpc SignOut(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Self(google.protobuf.Empty) returns (UserList.Item) {}
  rpc Log(google.protobuf.Duration) returns (LogList);

  rpc Index(google.protobuf.Duration) returns (UserList) {}
  rpc Show(UserQuery) returns (UserList.Item) {}
  rpc Lock(UserQuery) returns (google.protobuf.Empty) {}
  rpc Destory(UserQuery) returns (google.protobuf.Empty) {}
}

message LogList {
  enum Level {
    Debug = 0;
    Info = 1;
    Warning = 2;
    Error = 3;
  }
  message Item {
    int64 id = 1;
    int64 user_id = 2;
    string ip = 3;
    Level level = 4;
    string message = 5;
    google.protobuf.Timestamp created_at = 9;
  }
  repeated Item items = 1;
}

message SignInRequest {
  oneof user {
    string email = 1;
    string nick_name = 2;
  }
  string password = 11;
  google.protobuf.Duration ttl = 21;
}
message SignInResponse {
  string token = 1;
  ProfileRequest profile = 2;
}
message SignUpRequest {
  string email = 1;
  string nick_name = 2;
  string real_name = 3;
  string password = 4;
}
message EmailForm { string email = 1; }
message TokenForm { string token = 1; }
message ResetPasswordRequest {
  string token = 1;
  string password = 2;
}
message ChangePasswordRequest {
  string current_password = 1;
  string new_password = 2;
}

message ProfileRequest {
  string real_name = 1;
  string logo = 2;
  string home = 3;
}

message UserList {

  message Provider {
    enum Type {
      Email = 0;
      Google = 1;
      Factbook = 2;
      WeChat = 3;
    }
    Type type = 1;
    string id = 2;
  }

  message Profile {
    string logo = 1;
    string address = 4;
    map<string, string> data = 9;
  }
  message Item {
    int64 id = 1;
    string real_name = 2;
    string nick_name = 3;
    string email = 4;
    string uid = 5;
    Provider provider = 6;
    string lang = 7;
    string time_zone = 8;
    Profile profile = 19;
    int32 sign_in_count = 21;
    optional google.protobuf.Timestamp current_sign_in_at = 22;
    optional string current_sign_in_ip = 23;
    optional google.protobuf.Timestamp last_sign_in_at = 24;
    optional string last_sign_in_ip = 25;
    optional google.protobuf.Timestamp confirmed_at = 31;
    optional google.protobuf.Timestamp locked_at = 32;
    optional google.protobuf.Timestamp deleted_at = 33;
    google.protobuf.Timestamp updated_at = 39;
  }
  repeated Item items = 1;
}

message UserQuery {
  oneof who {
    int64 id = 1;
    string nick_name = 2;
    string email = 3;
  }
}

service Attachment {
  rpc All(google.protobuf.Duration) returns (AttachmentList) {}
  rpc Show(AttachmentQuery) returns (AttachmentList.Item) {}
  rpc Upload(AttachmentUploadRequest) returns (google.protobuf.Empty) {}
  rpc Destory(AttachmentQuery) returns (google.protobuf.Empty) {}
}

message AttachmentList {
  message Item {
    string code = 1;
    string user = 2;
    string title = 3;
    string content_type = 4;
    uint64 length = 5;
  }
  repeated Item items = 1;
}

message AttachmentQuery { string code = 1; }

message AttachmentUploadRequest {
  string code = 1;
  string file = 2;
}
